[package]
name = "seeker-alpha-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
dotenvy = "0.15.7"
reqwest = "0.11.25"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
tokio = { version = "1.36.0", features = ["full"] }

