[package]
name = "seeker-alpha-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
dotenvy = "0.15.7"
futures = "0.3.30"
rand = "0.8.5"
reqwest = "0.11.25"
scraper = "0.19.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "macros" ] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
